tests/paczka1/small_fuzzy/43856676.err
Error in line 10: AbgS S849 74,3
Error in line 13: Mqj S895 66,7
